data/derived/comb/progs/unify/prog6955.ml.out
Characters 83-87:
  wwhile (funt, b);;
          ^^^^
Error: This expression has type 'a -> 'a * int
       but an expression was expected of type 'a -> 'a * bool
       Type int is not compatible with type bool 
